# principled_brdf

./: .clangd  .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  pyproject.toml  setup.py
doc/: derivative.md.html
src/cpp/: CMakeLists.txt  disney_brdf.cpp  principled_brdf.cpp
src/cpp/common/: CMakeLists.txt  brdf_utils.h  common_utils.h  utils.h
src/cpp/cpu/: disney_brdf_cpu.cpp  disney_brdf_cpu.h  principled_brdf_cpu.cpp  principled_brdf_cpu.h  utils.cpp  utils.h
src/cpp/cuda/: disney_brdf_cuda.cu  disney_brdf_cuda.h  principled_brdf_cuda.cu  principled_brdf_cuda.h  utils.cu  utils.h
src/disney_brdf/: __init__.py  core.py
src/principled_brdf_torch/: __init__.py  principled_brdf.py
tests/: CMakeLists.txt  test_basic_functionality.py  test_brdf.py  test_consistency.py  test_gradients.py
