[build-system]
requires = [
    "cmake>=3.18",
    "ninja",
    "torch>=2.0.0",
    "scikit-build-core[pyproject]",
    "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "disney-brdf"
version = "0.1.0"
description = "Disney BRDF with derivatives as a custom PyTorch operation"
authors = [
    { name = "Raphael Braun", email = "keyraphi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
