[build-system]
requires = [
    "cmake>=3.18",
    "ninja",
    "torch>=2.0.0",
    "scikit-build-core[pyproject]",
    "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "principled_brdf_torch"
version = "0.1.0"
description = "Principled BRDF with derivatives in C++ and CUDA with python bindings using DLPack tensors, which can be adapted for any ML-Framework supporting DLPack. The pytorch Autograd function is given for reference."
authors = [
    { name = "Raphael Braun", email = "keyraphi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
